feat: enhance npm scripts for better development workflow
- Add test:watch for continuous testing
- Include deploy scripts for local and Sepolia networks
- Add node script for starting local FHEVM node

--- a/package.json
+++ b/package.json
@@ -78,8 +78,12 @@
     "prettier:check": "prettier --check \"**/*.{js,json,md,sol,ts,yml}\"",
     "prettier:write": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\"",
     "test": "hardhat test",
+    "test:watch": "hardhat test --watch",
     "build:ts": "tsc --project tsconfig.json",
-    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
+    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
+    "deploy:local": "hardhat deploy --network localhost",
+    "deploy:sepolia": "hardhat deploy --network sepolia",
+    "node": "hardhat node"
   },
   "overrides": {
     "ws@>=7.0.0 <7.5.10": ">=7.5.10",
